<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:backgroundTint="#60018786"
    tools:context=".UserMenu">


    <Button
        android:id="@+id/userMenuConvertFundsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/convert_funds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuViewBalanceButton" />

    <Button
        android:id="@+id/userMenuPayBillsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/pay_bills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuConvertFundsButton" />

    <Button
        android:id="@+id/userMenuDepositFundsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/deposit_funds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuUsernameText" />

    <Button
        android:id="@+id/userMenuWithdrawFundsButton"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/withdraw_funds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuDepositFundsButton" />

    <Button
        android:id="@+id/userMenuViewBalanceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:layout_marginTop="16dp"
        android:text="@string/view_balance"
        android:onClick="balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuWithdrawFundsButton" />

    <TextView
        android:id="@+id/userMenuUsernameText"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuWelcomeText" />

    <TextView
        android:id="@+id/userMenuWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>