<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:backgroundTint="#60018786"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/username"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#A13939"
        android:textColorHighlight="#E67373"
        android:textColorHint="#AFAFAF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="376dp"
        android:backgroundTint="@color/teal_700"
        android:hint="@string/sign_up"
        android:onClick="method2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/address"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="12dp"
        android:background="@color/teal_700"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#AFAFAF"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#AFAFAF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/password"
        style="@style/inputFieldStyle"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />
</androidx.constraintlayout.widget.ConstraintLayout>